--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -16,6 +16,7 @@
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         android:orientation="vertical"/>
 
-    <include layout="@layout/loading_message_layout" />
+    <include
+        layout="@layout/loading_message_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
