--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,9 +17,9 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.example.trendmoviesapp.view.SecondFragment"
+        android:name="com.example.trendmoviesapp.view.details.MovieDetailsFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/fragment_movie_details">
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
