--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -14,7 +14,7 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:contentScrim="@color/colorPrimary"
+            app:contentScrim="@color/purple_500"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
@@ -40,168 +40,177 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <LinearLayout android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/iv_poster"
-                    android:layout_gravity="top"
-                    android:layout_width="130dp"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_launcher_background"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:layout_margin="16dp"/>
+            <LinearLayout android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_marginTop="16dp"
-                    android:layout_gravity="top"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-                    <TextView
-                        android:layout_marginTop="8dp"
-                        android:id="@+id/tv_title"
-                        android:textSize="18sp"
-                        android:layout_width="wrap_content"
+                    <ImageView
+                        android:id="@+id/iv_poster"
+                        android:layout_gravity="top"
+                        android:layout_width="130dp"
                         android:layout_height="wrap_content"
-                        android:text="@string/app_name"/>
-
-                    <TextView
-                        android:id="@+id/tv_date"
-                        android:layout_marginTop="8dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/app_name"/>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <View
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/teal_200"/>
-
-            <LinearLayout
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="16dp">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/tv_rate"
-                        android:text="7.5"
-                        android:textColor="@color/white"
-                        android:padding="24dp"
+                        android:src="@drawable/ic_launcher_background"
+                        android:adjustViewBounds="true"
                         android:scaleType="fitCenter"
-                        android:layout_gravity="center"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_hexa"/>
+                        android:layout_margin="16dp"/>
 
-                    <TextView
-                        android:id="@+id/tv_top_rate"
+                    <LinearLayout
+                        android:layout_marginTop="16dp"
+                        android:layout_gravity="top"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/rate"
-                        android:layout_margin="8dp"
-                        android:layout_gravity="center"/>
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_marginTop="8dp"
+                            android:id="@+id/tv_title"
+                            android:textSize="18sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/app_name"/>
+
+                        <TextView
+                            android:id="@+id/tv_date"
+                            android:layout_marginTop="8dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/app_name"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
+
+                <View
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/teal_200"/>
 
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="16dp">
 
-                    <TextView
-                        android:id="@+id/tv_popularity"
-                        android:gravity="center"
-                        android:textSize="16sp"
-                        android:textColor="@color/white"
-                        android:padding="8dp"
-                        android:layout_gravity="center"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/ic_circle"/>
+                        android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                        <TextView
+                            android:id="@+id/tv_rate"
+                            android:text="7.5"
+                            android:textColor="@color/white"
+                            android:padding="24dp"
+                            android:scaleType="fitCenter"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/ic_hexa"/>
+
+                        <TextView
+                            android:id="@+id/tv_top_rate"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/rate"
+                            android:layout_margin="8dp"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         android:layout_height="wrap_content"
-                        android:text="@string/popularity"
-                        android:layout_margin="8dp"
-                        android:layout_gravity="center"/>
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_popularity"
+                            android:gravity="center"
+                            android:textSize="16sp"
+                            android:textColor="@color/white"
+                            android:padding="8dp"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/ic_circle"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/popularity"
+                            android:layout_margin="8dp"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_lang"
+                            android:text="en"
+                            android:gravity="center"
+                            android:textSize="16sp"
+                            android:textColor="@color/white"
+                            android:padding="8dp"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/ic_circle"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/language"
+                            android:layout_margin="8dp"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                <View
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/teal_200"/>
 
-                    <TextView
-                        android:id="@+id/tv_lang"
-                        android:gravity="center"
-                        android:textSize="16sp"
-                        android:textColor="@color/white"
-                        android:padding="8dp"
-                        android:layout_gravity="center"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_circle"/>
+                <TextView
+                    android:id="@+id/tv_overview"
+                    android:layout_margin="16dp"
+                    android:text="sdkjl sfdkjsdakl; sks;lksd  df;sklksdf;sdk sdfdls fsd;klsdkl; d;lsklsdk vfdlss;l"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/language"
-                        android:layout_margin="8dp"
-                        android:layout_gravity="center"/>
-
-                </LinearLayout>
+                <View
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/teal_200"/>
 
             </LinearLayout>
 
-            <View
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/teal_200"/>
+            <include layout="@layout/loading_message_layout"/>
 
-            <TextView
-                android:id="@+id/tv_overview"
-                android:layout_margin="16dp"
-                android:text="sdkjl sfdkjsdakl; sks;lksd  df;sklksdf;sdk sdfdls fsd;klsdkl; d;lsklsdk vfdlss;l"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-            <View
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/teal_200"/>
-
-        </LinearLayout>
+        </RelativeLayout>
 
     </androidx.core.widget.NestedScrollView>
 
